# mantora

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  config.toml.example  docker-compose.yml  mantora.toml.example
backend/: AGENTS.md  Dockerfile  README.md  hatch_build.py  pyproject.toml
backend/scripts/: record_mcp_trace.py  run_proxy.py  setup_dummy_data.py  simulate_demo.py
backend/src/mantora/: app.py
backend/src/mantora/_demo/: duckdb_seed.sql
backend/src/mantora/api/: __init__.py  routes_casts.py  routes_pending.py  routes_sessions.py  routes_settings.py  routes_stream.py  routes_targets.py
backend/src/mantora/casts/: __init__.py  models.py
backend/src/mantora/cli/: __init__.py  __main__.py  demo.py  main.py  mcp.py  ui.py  up.py
backend/src/mantora/config/: __init__.py  loader.py  settings.py
backend/src/mantora/connectors/: __init__.py  bigquery.py  databricks.py  duckdb.py  interface.py  postgres.py  registry.py  snowflake.py
backend/src/mantora/context/: __init__.py
backend/src/mantora/export/: __init__.py  cast_json.py  cast_md.py  receipt.py  receipt_context.py  session_json.py  session_md.py
backend/src/mantora/mcp/: __init__.py  policy_hooks.py  proxy.py  tools.py  trace_sanitizer.py
backend/tests/: __init__.py  stub_mcp_server.py  test_adapters.py  test_adapters_bigquery.py  test_adapters_databricks.py  test_adapters_snowflake.py  test_blocker_resolution.py  test_caps.py  test_cast_tools.py  test_cli_commands.py  test_cli_up_shutdown_filter.py  test_config_loader.py  test_context_and_receipts.py  test_export.py  test_golden_traces.py  test_mock_mcp_replay.py  test_platform_config.py  test_policy_hooks.py  test_policy_linter.py  test_proxy_db_errors.py  test_proxy_integration.py  test_schema_inference.py  test_session_summary.py  test_session_tools.py  test_settings.py  test_smoke.py  test_sql_guard.py  test_sqlite_migrations.py  test_store_search.py  test_store_sqlite.py  test_trace_sanitizer.py
backend/tests/fixtures/: __init__.py  mock_bigquery_server.py  mock_databricks_server.py  mock_duckdb_server.py  mock_mcp_server.py  mock_postgres_server.py  mock_snowflake_server.py
backend/tests/golden/: export_with_blockers.md  schema.json
(+94 files in other folders)
