[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mantora"
description = "Local MCP proxy + observability session store + UI server"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mantora contributors" }]
keywords = ["mcp", "observability", "proxy", "fastapi", "llm"]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "mcp>=1.0",
  "rich>=13.0",
  "sqlglot>=28.6.0",
]

[project.urls]
Homepage = "https://github.com/josephwibowo/mantora-mcp"
Repository = "https://github.com/josephwibowo/mantora-mcp"
Issues = "https://github.com/josephwibowo/mantora-mcp/issues"

[project.scripts]
mantora = "mantora.cli:main"
mantora-proxy = "mantora.cli:run_proxy"

[project.optional-dependencies]
duckdb = ["mcp-server-duckdb", "duckdb"]
postgres = ["mcp-server-postgres"]
all = ["duckdb", "mcp-server-duckdb", "mcp-server-postgres"]


[dependency-groups]
dev = [
  "httpx>=0.27",
  "mypy>=1.8",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.4",
  "types-jsonschema>=4.26.0.20260109",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mantora"]
include = ["src/mantora/_static/**", "src/mantora/_demo/**"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.version]
path = "src/mantora/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["duckdb", "uvicorn"]
ignore_missing_imports = true
